# OpenCropPhenotyping

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/toy dataset/: README.md  toy_image_b04.tif.aux.xml  toy_image_b08.tif.aux.xml
data/toy_dataset/: toy_image_b04.tif  toy_image_b08.tif
notebooks/: 00_create_toy_dataset.ipynb  01_open_sentinel2.ipynb  02_compute_indices.ipynb  test_environment.ipynb
src/opencropphenotyping/: indices.py  io.py  visualization.py
tests/: test_indices.py  test_io.py  test_toy_dataset.py  test_visualization.py
