[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "opencropphenotyping"
version = "0.1.0"
description = "Open-source tools for crop phenotyping using multispectral geospatial imagery"
authors = [
    {name = "Ton nom"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "rasterio",
    "matplotlib",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "jupyter",
]