[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "opencropphenotyping"
version = "0.1.0"
description = "Open-source tools for crop phenotyping using multispectral geospatial imagery"
authors = [
    {name = "Aurélien Peter"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "rasterio",
    "matplotlib",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "jupyter",
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
pythonpath = [
    "src"
]
addopts = "-v"
